[gd_scene load_steps=9 format=3 uid="uid://cfwig4lfftnqn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_oa110"]
[ext_resource type="PackedScene" uid="uid://bk42qcq0xkh8q" path="res://Scenes/gun.tscn" id="2_oyjh0"]
[ext_resource type="PackedScene" uid="uid://cr5oicaf4t2m7" path="res://Scenes/scope.tscn" id="4_8ab3y"]
[ext_resource type="PackedScene" uid="uid://c62qu1sk16bkk" path="res://Scenes/health_stamina_bars.tscn" id="4_cyn8l"]
[ext_resource type="AudioStream" uid="uid://clvlykoawbt23" path="res://Sounds/GunShot.wav" id="5_o6omw"]
[ext_resource type="AudioStream" uid="uid://bqtj881ptio6q" path="res://Sounds/slidesound.wav" id="6_kbm6o"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c3iue"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_js41i"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_oa110")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_c3iue")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_js41i")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0232074, 0.640401, -0.0443528)

[node name="Camera3D" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00527978, 5.96046e-08, -0.00243425)
fov = 90.0

[node name="hand" type="Node3D" parent="Neck/Camera3D"]
transform = Transform3D(0.998363, 0, 0.0571981, 0.00276321, 0.998832, -0.0482303, -0.0571314, 0.0483094, 0.997197, 0.466166, -0.333896, -0.57936)

[node name="Gun" parent="Neck/Camera3D/hand" instance=ExtResource("2_oyjh0")]
transform = Transform3D(0.145966, 0, 0, 0, 0.145966, 0, 0, 0, 0.145966, 0, 0, 0)

[node name="Scope" parent="." instance=ExtResource("4_8ab3y")]

[node name="Health_Stamina_bars" parent="." instance=ExtResource("4_cyn8l")]

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Gunshot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_o6omw")
max_distance = 42.4

[node name="SlideCheck" type="RayCast3D" parent="."]
transform = Transform3D(0.999963, -0.00192043, 0.0117728, 0.00188674, 0.999989, 0.00564487, -0.00839587, -0.00400617, 1.40342, -0.000202417, -1.05388, -0.0993605)
target_position = Vector3(0, 0, 1)

[node name="Slide_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kbm6o")

[connection signal="timeout" from="StaminaTimer" to="." method="_on_stamina_timer_timeout"]
